Fix bug in drag and drop game were the selected image was too big

--- a/interactive-learner/src/components/DragImages/DragImages.css
+++ b/interactive-learner/src/components/DragImages/DragImages.css
@@ -18,4 +18,5 @@
 
 #card {
   width: 100%;
+  max-width: 300px;
 }
